--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,10 +4,10 @@
   </head>
   <body>
     <form action="/login" method="post" name='form1'>
-     First name:<br>
-     <input type="text" name="firstname" value="Mickey"><br>
-     Last name:<br>
-     <input type="text" name="lastname" value="Mouse"><br><br>
+     Login :<br>
+     <input type="text" name="login" value="" placeholder="Votre login" autocomplete="off"><br>
+     Password :<br>
+     <input type="password" name="password" value="" placeholder="Votre password"><br><br>
      <input type="submit" value="Submit">
    </form>
   </body>
